[gd_scene load_steps=16 format=3 uid="uid://dhyworjmwpd60"]

[ext_resource type="Script" path="res://logbook.gd" id="1_c2hoe"]
[ext_resource type="Texture2D" uid="uid://bw7oks73mlkl4" path="res://Item Assets/Book.png" id="2_o76hn"]
[ext_resource type="FontFile" uid="uid://b6eqenbat8j3y" path="res://Fonts/minecraft-font/MinecraftBold-nMK1.otf" id="3_ijww3"]
[ext_resource type="FontFile" uid="uid://bt0a1mwu0stp4" path="res://Fonts/minecraft-font/MinecraftRegular-Bmg3.otf" id="3_vts5t"]
[ext_resource type="FontFile" uid="uid://52bi15d387rk" path="res://Fonts/minecraft-font/MinecraftBoldItalic-1y1e.otf" id="4_ubqnj"]
[ext_resource type="Texture2D" uid="uid://b1fsx4dyfp5am" path="res://Item Assets/Coin2.png" id="6_4uos4"]

[sub_resource type="LabelSettings" id="LabelSettings_a5oah"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b67yk"]
atlas = ExtResource("2_o76hn")
region = Rect2(1632, 862, 591, 784)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvmbi"]
atlas = ExtResource("2_o76hn")
region = Rect2(300, 800, 1233, 800)

[sub_resource type="SpriteFrames" id="SpriteFrames_bawx0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b67yk")
}],
"loop": true,
"name": &"not_open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvmbi")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_v1rwh"]
atlas = ExtResource("6_4uos4")
region = Rect2(0, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_nryc8"]
atlas = ExtResource("6_4uos4")
region = Rect2(10, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie1wl"]
atlas = ExtResource("6_4uos4")
region = Rect2(20, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkdv1"]
atlas = ExtResource("6_4uos4")
region = Rect2(30, 0, 10, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_y4cnq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1rwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nryc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie1wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkdv1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Logbook" type="Area2D"]
z_index = 20
script = ExtResource("1_c2hoe")

[node name="btn_left" type="Label" parent="."]
z_index = 21
offset_left = -257.0
offset_top = 116.0
offset_right = -24.0
offset_bottom = 165.0
theme_override_fonts/font = ExtResource("4_ubqnj")
text = "
<- Click left to back"

[node name="btn_right" type="Label" parent="."]
z_index = 21
offset_left = 70.0
offset_top = 117.0
offset_right = 295.0
offset_bottom = 164.0
theme_override_fonts/font = ExtResource("4_ubqnj")
text = "
Click right to next ->"

[node name="left_page" type="Label" parent="."]
z_index = 21
anchors_preset = -1
anchor_left = 0.017
anchor_top = 0.26
anchor_right = 0.017
anchor_bottom = 0.26
offset_left = -252.0
offset_top = -136.0
offset_right = -36.0
offset_bottom = 65.0
theme_override_fonts/font = ExtResource("3_vts5t")
text = "THIS IS THE LOG BOOK:
"
label_settings = SubResource("LabelSettings_a5oah")

[node name="right_page" type="Label" parent="."]
z_index = 21
offset_left = 70.0
offset_top = -139.0
offset_right = 290.0
offset_bottom = 62.0
theme_override_fonts/font = ExtResource("3_vts5t")
text = "Header 2"

[node name="left_head" type="Label" parent="."]
z_index = 21
offset_left = -256.0
offset_top = -181.0
offset_right = -41.0
offset_bottom = -149.0
theme_override_fonts/font = ExtResource("3_ijww3")
text = "Page 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="right_head" type="Label" parent="."]
z_index = 21
offset_left = 73.0
offset_top = -180.0
offset_right = 263.0
offset_bottom = -154.0
theme_override_fonts/font = ExtResource("3_ijww3")
text = "Page 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1.00001, 6)
scale = Vector2(0.74483, 0.7975)
sprite_frames = SubResource("SpriteFrames_bawx0")
animation = &"open"

[node name="title" type="Label" parent="."]
z_index = 21
offset_left = -137.0
offset_top = -167.0
offset_right = 156.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("4_ubqnj")
theme_override_font_sizes/font_size = 35
text = "The 
Travels
Of
Ibn Battuta"
horizontal_alignment = 1
vertical_alignment = 1

[node name="gold" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="gold"]
position = Vector2(-243.875, -130)
scale = Vector2(2.575, 2.35)
sprite_frames = SubResource("SpriteFrames_y4cnq")
autoplay = "default"
frame_progress = 0.519702

[node name="silk" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="silk"]

[node name="books" type="Label" parent="."]
offset_left = -256.0
offset_top = -45.0
offset_right = -216.0
offset_bottom = -22.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="books"]

[node name="spices" type="Label" parent="."]
offset_left = -237.0
offset_top = 31.0
offset_right = -197.0
offset_bottom = 54.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="spices"]
